--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,13 @@
 /* styles go here */
-label {
+.label {
   display: block;
   margin-bottom: 10px;
 }
 
-label:last-child {
+.label_last {
   margin-bottom: 0;
 }
 
-fieldset {
+.fieldset {
   margin-bottom: 20px;
 }
